--- a/Mainpage.form
+++ b/Mainpage.form
@@ -22,7 +22,7 @@
             </constraints>
             <properties>
               <background color="-2289908"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="Back"/>
             </properties>
           </component>
@@ -32,7 +32,7 @@
             </constraints>
             <properties>
               <background color="-3679233"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="0"/>
             </properties>
           </component>
@@ -42,7 +42,7 @@
             </constraints>
             <properties>
               <background color="-15822071"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="Enter"/>
             </properties>
           </component>
@@ -52,7 +52,7 @@
             </constraints>
             <properties>
               <background color="-4072705"/>
-              <foreground color="-1576961"/>
+              <foreground color="-16777216"/>
               <text value="1"/>
             </properties>
           </component>
@@ -62,7 +62,7 @@
             </constraints>
             <properties>
               <background color="-3744513"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="2"/>
             </properties>
           </component>
@@ -72,7 +72,7 @@
             </constraints>
             <properties>
               <background color="-3677953"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="3"/>
             </properties>
           </component>
@@ -82,7 +82,7 @@
             </constraints>
             <properties>
               <background color="-4006657"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="5"/>
             </properties>
           </component>
@@ -92,7 +92,7 @@
             </constraints>
             <properties>
               <background color="-3679489"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="6"/>
             </properties>
           </component>
@@ -102,7 +102,7 @@
             </constraints>
             <properties>
               <background color="-3613953"/>
-              <foreground color="-2166017"/>
+              <foreground color="-16777216"/>
               <text value="4"/>
             </properties>
           </component>
@@ -112,7 +112,7 @@
             </constraints>
             <properties>
               <background color="-4464641"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="9"/>
             </properties>
           </component>
@@ -122,7 +122,7 @@
             </constraints>
             <properties>
               <background color="-3744001"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="8"/>
             </properties>
           </component>
@@ -132,13 +132,13 @@
             </constraints>
             <properties>
               <background color="-4006913"/>
-              <foreground color="-1838594"/>
+              <foreground color="-16777216"/>
               <text value="7"/>
             </properties>
           </component>
         </children>
       </grid>
-      <grid id="c3ec1" binding="signPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c3ec1" binding="signPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -152,7 +152,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="+"/>
             </properties>
           </component>
@@ -162,7 +162,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="/"/>
             </properties>
           </component>
@@ -172,7 +172,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="*"/>
             </properties>
           </component>
@@ -182,8 +182,16 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="-"/>
+            </properties>
+          </component>
+          <component id="b3a14" class="javax.swing.JButton" binding="decimalButton">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="."/>
             </properties>
           </component>
         </children>
@@ -196,14 +204,14 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="2c30a" class="javax.swing.JButton" binding="clearButton">
+          <component id="2c30a" class="javax.swing.JButton" binding="negativeButton">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
-              <text value="Clear"/>
+              <foreground color="-16777216"/>
+              <text value="(-)"/>
             </properties>
           </component>
           <component id="e456a" class="javax.swing.JButton" binding="log10Button" default-binding="true">
@@ -212,7 +220,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="log(10)"/>
             </properties>
           </component>
@@ -222,7 +230,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="Sin()"/>
             </properties>
           </component>
@@ -232,7 +240,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="Cos()"/>
             </properties>
           </component>
@@ -242,7 +250,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="^"/>
             </properties>
           </component>
@@ -252,7 +260,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="ln()"/>
             </properties>
           </component>
@@ -262,7 +270,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="{"/>
             </properties>
           </component>
@@ -272,7 +280,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="}"/>
             </properties>
           </component>
@@ -282,7 +290,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="Tan()"/>
             </properties>
           </component>
@@ -292,7 +300,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="("/>
             </properties>
           </component>
@@ -302,7 +310,7 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value=")"/>
             </properties>
           </component>
@@ -312,20 +320,36 @@
             </constraints>
             <properties>
               <background color="-7298899"/>
-              <foreground color="-1774337"/>
+              <foreground color="-16777216"/>
               <text value="Cot()"/>
             </properties>
           </component>
         </children>
       </grid>
-      <component id="659b" class="javax.swing.JTextPane" binding="calculationPane">
+      <scrollpane id="181a1" binding="scrollPane">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="659b" class="javax.swing.JTextPane" binding="calculationPane">
+            <constraints/>
+            <properties>
+              <background color="-1"/>
+              <editable value="false"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="571a8" class="javax.swing.JTextPane" binding="errorPane">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-1"/>
+          <editable value="false"/>
         </properties>
       </component>
     </children>
